--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "lint": "eslint .",
+    "format": "prettier --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\""
   },
   "dependencies": {
+    "@fontsource/battambang": "^4.3.0",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/image-url": "^0.140.22",
+    "date-fns": "^2.21.3",
     "gatsby": "^3.4.1",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-postcss": "^4.5.0",
@@ -24,9 +30,25 @@
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-source-sanity": "^7.0.4",
     "gatsby-transformer-sharp": "^3.5.0",
+    "get-youtube-id": "^1.0.1",
     "postcss": "^8.2.6",
+    "qrcode": "^1.4.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-youtube": "^7.13.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
+    "autoprefixer": "^10.2.5",
+    "babel-eslint": "^10.1.0",
+    "dotenv": "^8.6.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "prettier": "^2.3.0",
+    "tailwindcss": "^2.1.2"
   }
 }
