--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-youtube": "^7.13.1"
   },
   "devDependencies": {
