update packages & change display font

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "format": "prettier --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\""
   },
   "dependencies": {
+    "@fontsource/angkor": "^4.4.0",
     "@fontsource/battambang": "^4.3.0",
-    "@fontsource/dangrek": "^4.3.0",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.22",
     "date-fns": "^2.21.3",
