--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/battambang": "^4.3.0",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.21.3",
     "gatsby": "^3.4.1",
     "gatsby-plugin-image": "^1.5.0",
