--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "format": "prettier --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\""
   },
   "dependencies": {
-    "@fontsource/angkor": "^4.4.0",
     "@fontsource/battambang": "^4.3.0",
+    "@fontsource/londrina-solid": "^4.5.6",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^1.0.1",
-    "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.21.3",
     "gatsby": "^3.4.1",
     "gatsby-plugin-image": "^1.5.0",
@@ -33,17 +32,17 @@
     "gatsby-source-sanity": "^7.0.4",
     "gatsby-transformer-sharp": "^3.5.0",
     "get-youtube-id": "^1.0.1",
-    "postcss": "^8.2.6",
     "qrcode": "^1.4.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-messenger-chat-plugin": "^2.0.2",
     "react-youtube": "^7.13.1"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
-    "autoprefixer": "^10.2.5",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.4",
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.6.0",
     "eslint": "^7.26.0",
@@ -51,7 +50,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "postcss": "^8.4.12",
     "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^3.0.24"
   }
 }
