--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "format": "prettier --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\""
   },
   "dependencies": {
+    "@cloudinary/react": "^1.3.0",
+    "@cloudinary/url-gen": "^1.8.0",
     "@fontsource/battambang": "^4.3.0",
     "@fontsource/londrina-solid": "^4.5.6",
     "@sanity/block-content-to-react": "^2.0.7",
@@ -34,6 +36,7 @@
     "get-youtube-id": "^1.0.1",
     "qrcode": "^1.4.4",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
